--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "sharp": "^0.34.5"
   }
